--- a/index.html
+++ b/index.html
@@ -65,16 +65,10 @@
  <br/>
 
 
- <img src=src/HSPU.jpg width=300 height=300 />
- <img src=src/eingedi.jpg width=240 height=300 />
- <img src=src/crossfit.jpg width=300 height=300 />
- <img src=src/football.jpg width=360 height=300 />
- <img src=src/bartender.jpg width=300 height=300 />
- <img src=src/tennis.jpg width=300 height=300 />
- <img src=src/flowers.jpg width=260 height=300 />
- <img src=src/backSquat.jpg width=185 height=300 />
- <img src=src/yehi.jpg width=370 height=300 />
- <img src=src/portugal.jpg width=280 height=300 />
+ <img src=src/saba.jpg width=300 height=300 />
+ <img src=src/saba1.jpg width=240 height=300 />
+ <img src=src/saba2.jpg width=300 height=300 />
+ <img src=src/saba3.jpg width=360 height=300 />
 
  <br/>
 
