--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <br/>
  <br/>
  <p>
-  קוראים לי טלי שוורץ, ואני סטודנטית שנה שלישית להנדסת מערכות מידע בבן גוריון.
+  תכירו את ????? - סבו של בן הזוג שלי.
   <br/>
   בזמני הפנוי אני אוהבת ללכת להופעות - מוזיקה, סטנדאפ, הכל הולך.
   <br/>
@@ -64,11 +64,18 @@
 
  <br/>
 
-
+ <div style="text-align:center">
  <img src=src/saba.jpg width=300 height=300 />
+ </div>
+ <div style="text-align:center">
  <img src=src/saba1.jpg width=240 height=300 />
+ </div>
+ <div style="text-align:center">
  <img src=src/saba2.jpg width=300 height=300 />
+ </div>
+ <div style="text-align:center">
  <img src=src/saba3.jpg width=360 height=300 />
+ </div>
 
  <br/>
 
