--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
  <br/>
  <br/>
  <p>
-  תכירו את ????? - סבו של בן הזוג שלי.
+  תכירו את שלום אשואל - סבו של בן הזוג שלי.
   <br/>
-  בזמני הפנוי אני אוהבת ללכת להופעות - מוזיקה, סטנדאפ, הכל הולך.
+שלום כיום בן 87 ומתגורר בראש העין. במקור מתימן, עלה לארץ בגיל 16 עם הוריו - הלכו ברגל ונסעו במשאיות במשך 3 ימים, לאחר מכן המתינו כחודשיים עד שהגיעו ארצה במטוס.
   <br/>
-  בנוסף, אין סיכוי שאעביר יומיים רצופים בלי אימון קרוספיט אחד לפחות. בד"כ יהיו אפילו שניים.
+בהמשך, שלום פגש את סבתא בתנועת הנוער בני עקיבא, וחצי שנה לאחר שנישאו - התגייס לצבא לחטיבת גבעתי. בהמשך נולדו להם 4 ילדים מקסימים.
   <br/>
-  גם בישול ואפייה הם תחומים שאני מאוד מאוד מתחברת אליהם.
+לאורך חייו עבד שלום כאיש אחזקה במפעלים ברחבי הארץ, זאת לאחר שלמד מסגרות.
   <br/>
-  מבחינת התואר, אני נמשכת למקצועות הסייבר והבינה מלאכותית.
+כיום לסבא שלום יש 10 נכדים ונינה אחת מקסימה בשם נוצ'קה.
   <br/>
-  כמו כן, מאוד נהנתי מהתוצר המרשים שיצרנו בקורס 'אחזור מידע' בסמסטר שעבר.
-  <br/>
-  בעבודה מאוד התקשתי בערך עם הכל. מעולם לא כתבתי בשפת HTML והכל הרגיש עבורי כמו סינית, מאוד. מדי. העיקר שזה מאחורינו.
+בתקופה לא סימפטית זו, סבא שלום נמצא 24/7 יחד עם מטפלו המסור וואל הפיליפיני, ועם בתו מזל.
+    <br/>
+  כולנו מקווים שהמצב המטורף הזה והסגר יסתיימו בהקדם.
  </p>
  <br/>
 </section>
@@ -59,9 +59,8 @@
  <br/>
  <br/>
  <br/>
- <h1>My Photos</h1>
+ <h1>His Photos</h1>
  <br/>
-
  <br/>
 
  <div style="text-align:center">
@@ -85,23 +84,20 @@
  <br/>
  <br/>
  <br/>
- <h1>My Playlist</h1>
+ <h1>His Playlist</h1>
  <br/>
 
  <div style="text-align:center">
  </div>
 
  <div style="text-align:center">
- <iframe  width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL-Mvpq4gxqGEEcj40x3kllZTASN1OOcvg
+ <iframe  width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLtIAZn0GJK2k8Thec3BHeezhKTqYZYonB
 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
  <br/>
  <br/>
 </section>
 
-<!--
-<section id="like" class="section">
--->
 <section id="like" >
  <br/>
  <br/>
@@ -142,9 +138,6 @@
  <div style="text-align:center">
   <img id = "qrImg" src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fsise-web-development-environments.github.io%2F205788581%2F&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"  width="200" height="200" >
 
-<!--
-  <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https%3A%2F%2Fsise-web-development-environments.github.io%2F205788581%2F&amp;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L" alt="qr code" />
--->
  </div>
  <br/>
 </section>
