--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <br/>
  <br/>
  <br/>
- <p>
+ <>
   תכירו את שלום אשואל - סבו של בן הזוג שלי.
   <br/>
 שלום כיום בן 87 ומתגורר בראש העין. במקור מתימן, עלה לארץ בגיל 16 עם הוריו - הלכו ברגל ונסעו במשאיות במשך 3 ימים, לאחר מכן המתינו כחודשיים עד שהגיעו ארצה במטוס.
@@ -48,7 +48,9 @@
 בתקופה לא סימפטית זו, סבא שלום נמצא 24/7 יחד עם מטפלו המסור וואל הפיליפיני, ועם בתו מזל.
     <br/>
   כולנו מקווים שהמצב המטורף הזה והסגר יסתיימו בהקדם.
- </p>
+ <br/>
+ הפלייליסט המצורף כולל שירים שסבא היה משמיע באוטו לבן זוגי, כשהיה אוסף אותו מבית הספר אליו הביתה, בכל פעם מחדש 3>
+</p>
  <br/>
 </section>
 
