--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  <br/>
  <br/>
  <br/>
- <>
+ <p>
   תכירו את שלום אשואל - סבו של בן הזוג שלי.
   <br/>
 שלום כיום בן 87 ומתגורר בראש העין. במקור מתימן, עלה לארץ בגיל 16 עם הוריו - הלכו ברגל ונסעו במשאיות במשך 3 ימים, לאחר מכן המתינו כחודשיים עד שהגיעו ארצה במטוס.
@@ -48,11 +48,11 @@
 בתקופה לא סימפטית זו, סבא שלום נמצא 24/7 יחד עם מטפלו המסור וואל הפיליפיני, ועם בתו מזל.
     <br/>
   כולנו מקווים שהמצב המטורף הזה והסגר יסתיימו בהקדם.
- <br/>
- הפלייליסט המצורף כולל שירים שסבא היה משמיע באוטו לבן זוגי, כשהיה אוסף אותו מבית הספר אליו הביתה, בכל פעם מחדש 3>
-</p>
- <br/>
+  <br/>
+  הפלייליסט המצורף כולל שירים שסבא היה משמיע באוטו לבן זוגי בילדותו, כשהיה אוסף אותו מבית הספר אליו הביתה, בכל פעם מחדש 3>
+ </p>
 </section>
+
 
 <section id="photos" class="section">
  <br/>
@@ -93,7 +93,7 @@
  </div>
 
  <div style="text-align:center">
- <iframe  width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLtIAZn0GJK2k8Thec3BHeezhKTqYZYonB
+ <iframe  width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL-Mvpq4gxqGEEcj40x3kllZTASN1OOcvg
 " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
  <br/>
