--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <div class="menu-bar">
  <ul>
-  <li><a href="#about">About Me</a></li>
-  <li><a href="#photos">My Photos</a></li>
-  <li><a href="#playlist">My Playlist</a></li>
+  <li><a href="#about">About Him</a></li>
+  <li><a href="#photos">His Photos</a></li>
+  <li><a href="#playlist">His Playlist</a></li>
   <li><a href="#like">Like</a></li>
   <li><a href="#qrcoder">QR code</a></li>
   <li><a href="#spa">Q&A</a></li>
