--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
  <br/>
  <br/>
  <br/>
- <h1>Meet the great guy</h1>
  <br/>
+ <h1>About the great guy</h1>
  <br/>
  <p>
   תכירו את שלום אשואל - סבו של בן הזוג שלי.
