--- a/index.html
+++ b/index.html
@@ -182,25 +182,6 @@
 
 </section>
 
-<!--
-<form action="mailto:talisch@post.bgu.ac.il">
-
-<div id="contact" class="section">
- <container class="content">
-  <p class="header">Contact Me</p>
-  <form action="mailto:talischvartz@gmail.com">
-   <div class="field">
-    <input name="subject" id="subject" type="text" class="input" value="Subject">
-   </div>
-   <div class="field">
-    <textarea class="textarea" name="body" id="emailBody">Email content</textarea>
-   </div>
-   <div><input type="submit" value="Create Email" class="button is-primary, button"></div>
-  </form>
- </container>
-</div>
--->
-
 <section id="contact" class="section">
  <br/>
  <br/>
@@ -222,9 +203,7 @@
  <br/>
  <br/>
 
-
-
-
+ <div style="text-align:center">
  <h3>Send e-mail to talisch@post.bgu.ac.il:</h3>
 
  <form action="mailto:talisch@post.bgu.ac.il" method="post" enctype="text/plain">
@@ -251,6 +230,7 @@
   <input type="submit" value="Send">
   <input type="reset" value="Reset">
  </form>
+ </div>
  <br/>
  <br/>
  <br/>
